--- a/app/css/style.css
+++ b/app/css/style.css
@@ -46,3 +46,15 @@ body{
 
 }
 
+.input-container{
+    text-align: center;
+    margin: 2rem auto;
+}
+
+.input{
+    margin: 0 1rem;
+}
+
+.label{
+    font-size: 1.6rem;
+}
