--- a/app/css/style.css
+++ b/app/css/style.css
@@ -85,6 +85,11 @@ body{
     background: lightgrey;
 }
 
+.button--disabled:hover, .button--disabled:active, .button--disabled:focus{
+    background: lightgrey;
+    opacity: 1;
+}
+
 .button-left{
     margin-right: 7rem;
 }
